# watcher

./: CMakeLists.txt  README.md  client.cpp  main.cpp  run.py  server.cpp  watcher.cpp  watcherlib.cpp
include/: client.h  server.h  server.h.gch  watcher.h  watcher.h.gch  watcherlib.h
